add default route for run tests

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Ejecutar tests
         run: |
-          pytest tests/ -v
+          PYTHONPATH=. pytest tests/ -v
 
       - name: Ejecutar con cobertura
         run: |
