change  resource path for coverga tests

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Ejecutar con cobertura
         run: |
-          pytest --cov=app --cov-report=term --cov-report=html
+          PYTHONPATH=. pytest --cov=app --cov-report=term --cov-report=html
 
       - name: Guardar reporte
         uses: actions/upload-artifact@v4
